fix: menu item hidden on small screen

--- a/apps/web-backoffice/src/styles/styles.css
+++ b/apps/web-backoffice/src/styles/styles.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --header-height: 70px;
+}
